--- a/CFGnames/style.css
+++ b/CFGnames/style.css
@@ -1,45 +1,42 @@
 body {
     text-align: center;
     margin: 0;
-    font-family: 'Courier New', monospace;
-    background-color: rgb(214, 214, 214);
+    font-family: 'Papyrus', fantasy;
+    background-color: rgb(255, 255, 255);
 }
 
 #h1 {
-    font-family: 'Lucida Console', monospace;
+    font-family: 'Brush Script MT', cursive;
     font-size: 2em;
     font-weight: bold;
     padding: .5em;
     margin: .5em;
     box-shadow: 1px 1px 1px 1px rgb(143, 143, 143);
-    background-color: rgb(255, 177, 32);
+    background-color: rgb(255, 60, 0);
     color: white;
     border: none;
-    border-radius: 5em;
     outline: none;
 }
 
 #generate {
-    font-family: 'Monaco', monospace;
+    font-family: 'Lucida Handwriting', cursive;
     font-size: 2em;
     font-weight: bold;
     padding: .5em;
     margin: .5em;
     box-shadow: 1px 1px 1px 1px rgb(143, 143, 143);
-    background-color: rgb(118, 193, 255);
+    background-color: rgb(255, 151, 151);
     color: white;
     border: none;
-    border-radius: 5em;
     outline: none;
 }
 
 #sentences p {
-    box-shadow: 1px 1px 1px 1px rgb(150, 150, 150);
+    box-shadow: 1px 1px 1px 1px rgb(250, 255, 187);
     margin: 2em;
     margin-left: 15em;
     margin-right: 15em;
     padding: 2em;
-    border-radius: 5em;
     font-size: 1.5em;
-    background-color: rgb(239, 255, 225);
+    background-color: rgb(255, 242, 62);
 }
